--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="toriko.css">
+    <link rel="stylesheet" href="toriko1.css">
     <!-- <link rel="stylesheet" href="toriko2.css"> -->
     <title>トリコ1</title>
 </head>
@@ -51,7 +51,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/ScrollTrigger.min.js"></script>
-    <script src="toriko.js"></script>
+    <script src="toriko1.js"></script>
     <!-- <script src="toriko2.js"></script> -->
 </body>
 </html>
